fix url for search and color year dark mode

--- a/src/sass/layouts/_teme.scss
+++ b/src/sass/layouts/_teme.scss
@@ -76,4 +76,7 @@ body.darkMode {
     background-color: var(--text-color);
     color: var(--bg-color);
   }
+  .mounth-year-display {
+    color: var(--bg-color);
+  }
 }
